# chatvault

./: .gitignore  Package.resolved  Package.swift  README.md  SampleChat.txt  chatvault-spec.md
Resources/: AppIcon.icns  Info.plist
Sources/ChatVault/App/: ChatVaultApp.swift
Sources/ChatVault/Features/ArchiveDetails/: ArchiveDetailsView.swift
Sources/ChatVault/Features/ArchiveList/: ArchiveListView.swift
Sources/ChatVault/Features/Birthdays/: BirthdaysTodayView.swift
Sources/ChatVault/Models/: ChatArchive+Preview.swift  ChatArchive.swift  ChatMessage.swift  ChatParticipant.swift  MediaType.swift
Sources/ChatVault/Parsing/: BirthdayExtractor.swift  ChatTitleSuggester.swift  ParsedChat.swift  ParserWarning.swift  WhatsAppChatParser.swift
Sources/ChatVault/Persistence/: ArchiveStorage.swift  ChatStore.swift  ImportFilePreparer.swift  MessageSearchIndex.swift  ModelContainerFactory.swift  ZipImportParser.swift
Tests/ChatVaultTests/: BirthdayExtractorTests.swift  ChatStoreTests.swift  ChatVaultTests.swift  WhatsAppChatParserTests.swift
qtcpp/: CMakeLists.txt  Info.plist.in  README.md  resources.qrc
qtcpp/src/: Database.cpp  Database.h  Importer.cpp  Importer.h  MainWindow.cpp  MainWindow.h  MessageDelegate.cpp  MessageDelegate.h  MessageModel.cpp  MessageModel.h  main.cpp
scripts/: build-app.sh  generate-app-icon.sh
test-fixtures/sample-exports/david-chen/: WhatsApp Chat with David Chen.txt
test-fixtures/sample-exports/sarah/: WhatsApp Chat with Sarah.txt
test-fixtures/sample-exports/weekend-hikers/: WhatsApp Chat with Weekend Hikers.txt
(+13 files in other folders)
